Use Tokio alpha

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ repository = "https://github.com/mvirkkunen/usbip-usbd"
 
 [dependencies]
 bytes = "0.4.12"
-tokio = "0.1.22"
-usb-device = "0.2.1"
+tokio = "0.2.0-alpha.2"
+usb-device = "0.2.2"
 
 [dev-dependencies]
 usbd-serial = "0.1.0"
