--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,12 @@ authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
 repository = "https://github.com/mvirkkunen/usbip-usbd"
 
 [dependencies]
-bytes = "0.4.12"
-tokio = "0.2.0-alpha.4"
+bytes = "0.5.4"
+futures = "0.3.4"
+#futures_codec = "0.4.0"
+tokio = { version = "0.2.18", features = ["io-std", "io-util", "macros", "net", "rt-threaded", "sync", "time"] }
+tokio-util = { version = "0.3.1", features = ["codec"] }
+usb-device = "0.2.5"
 
 [dev-dependencies]
-#usbd-serial = "0.1.0"
-usbd-serial = { path = "../usbd-serial" }
-
-[dependencies.usb-device]
-git = "https://github.com/mvirkkunen/usb-device"
-rev = "327c7d08c8483c7e36306b5b9672083f5ca9317f"
+usbd-serial = "0.1.0"
